fluxcd-dev/virtualservice-external.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sward-warden-external
spec:
  hosts:
    - sw-dev.polecatworks.com
  gateways:
    - istio-ingress/polecatworks-gateway
  http:
    - name: keycloak
      match:
        - uri:
            prefix: /auth
      headers:
        request:
          set:
            x-forwarded-proto: "https"
            x-forwarded-port: "443"
      route:
        - destination:
            host: keycloak-keycloakx-http.auth.svc.cluster.local
            port:
              number: 80
    - name: sward-warden-be
      match:
        - uri:
            prefix: /sward
      route:
        - destination:
            host: sward-warden-be
    - name: sward-warden-fe
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: sward-warden-fe-nginx-view
